# semverbot-examples

./: .gitignore  LICENSE  README.md
.github/workflows/: main.yaml
python/fastapi/: .gitignore  pyproject.toml  readme.md  tasks.py
python/fastapi/src/: main.py
python/package/: pyproject.toml  readme.md
python/package/package-demo/: __init__.py  main.py
