[tool.poetry]
name = "fastapi"
version = "0.0.0"
description = "This is an example on how to use SBOT with Fastapi"
authors = ["ToneVDB <vdbtone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.85.0"
uvicorn = "^0.18.3" 

[tool.poetry.dev-dependencies]
invoke = "^1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
