[tool.poetry]
name = "package-demo"
version = "0.0.0"
description = "This is an example on how to use sbot when managing a python (pip) package"
authors = ["Tone vanden Bergh <vdbtone@gmail.com>"]
readme = "README.md"
packages = [{include = "example_package"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
